# metocean-ml

./: README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/: example_ml.py  example_ml_abc.py
metocean_ml/: ml.py
tests/: test_ml.py
tests/data/: NORAC_test.csv
