[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "metocean-ml"
version = "0.0.1"
description = "metocean-ml - machine learning tool for metocean data"
authors = ["Konstantinos Christakos MET Norway & NTNU"]
license = "GPLv3"
include = [ "tests" ]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.17"
matplotlib = "^3.1"
pandas = "^1.3.3"
scipy = "^1.7.1"
xarray = "^0.19.0"
scikit-learn = "^0.24.2"
keras = "^3.4.0"
tensorflow = "^2.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"
Sphinx = "^4.2.0"

[tool.pylint.master]
extension-pkg-whitelist="netCDF4,numpy,scipy"

[tool.pylint.messages_control]
disable = "all"
enable = "F,unreachable,duplicate-key,unnecessary-semicolon,global-variable-not-assigned,unused-variable,unused-wildcard-import,binary-op-exception,bad-format-string,anomalous-backslash-in-string,bad-open-mode,E0001,E0011,E0012,E0100,E0101,E0102,E0103,E0104,E0105,E0107,E0108,E0110,E0111,E0112,E0113,E0114,E0115,E0116,E0117,E0118,E0202,E0203,E0211,E0213,E0236,E0237,E0238,E0239,E0240,E0241,E0301,E0302,E0303,E0401,E0402,E0601,E0602,E0603,E0604,E0611,E0632,E0633,E0701,E0702,E0703,E0704,E0710,E0711,E0712,E1003,E1101,E1102,E1111,E1120,E1121,E1123,E1124,E1125,E1126,E1127,E1128,E1129,E1130,E1131,E1132,E1133,E1134,E1135,E1137,E1138,E1139,E1200,E1201,E1205,E1206,E1300,E1301,E1302,E1303,E1304,E1305,E1306,E1310,E1700,E1701"